--- a/angular.json
+++ b/angular.json
@@ -29,12 +29,8 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
-              
             ],
-            "scripts": [
-
-
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -103,6 +99,10 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
